--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@
           box-shadow: none;
 }
 
+:root {
+  --body-bg: hsl(185, 41%, 84%);
+  --calc-bg: hsl(189, 41%, 97%);
+  --dark-cyan: hsl(183, 100%, 15%);
+  --text-light-bg: hsl(186, 14%, 43%);
+  --text-dark-bg: hsl(184, 14%, 56%);
+  --strong-cyan: hsl(172, 67%, 45%);
+  --white: white;
+}
+
 body {
   font-family: "Space Mono", monospace;
   display: -webkit-box;
@@ -20,7 +30,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background: #c5e4e7;
+  background: var(--body-bg);
 }
 
 .logo {
@@ -29,7 +39,7 @@ body {
 }
 
 main {
-  background: white;
+  background: var(--white);
   padding: 1.4rem;
   border-radius: 1rem;
   display: -ms-grid;
@@ -42,11 +52,24 @@ main {
 .left-side {
   padding: 0.65rem;
   margin-right: 0.65rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 h4 {
   font-size: 0.7rem;
-  color: #5e7a7d;
+  color: var(--text-light-bg);
 }
 
 .buttons {
@@ -55,7 +78,7 @@ h4 {
   -ms-grid-columns: (6.25rem)[3];
       grid-template-columns: repeat(3, 6.25rem);
   gap: 0.65rem;
-  margin-block: 30px;
+  margin: 30px 0;
 }
 
 .buttons h4 {
@@ -69,17 +92,17 @@ h4 {
   border: none;
   padding: 0.45rem 0.9rem;
   border-radius: 0.3rem;
-  background: #00494d;
-  color: white;
+  background: var(--dark-cyan);
+  color: var(--white);
   font-weight: 700;
   cursor: pointer;
   height: 2.1rem;
 }
 
 .buttons .custom {
-  background: #f4fafa;
-  color: #5e7a7d;
-  border: 2px solid white;
+  background: var(--calc-bg);
+  color: var(--text-light-bg);
+  border: 2px solid var(--white);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -93,7 +116,7 @@ h4 {
 
 .buttons .custom input[type="number"] {
   text-align: center;
-  background: #f4fafa;
+  background: var(--calc-bg);
   width: 100%;
   font-size: 0.9rem;
 }
@@ -107,19 +130,161 @@ label {
           align-items: center;
   padding: 0.9rem;
   border-radius: 0.3rem;
-  background: #f4fafa;
+  background: var(--calc-bg);
   cursor: pointer;
 }
 
+.currency {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100px;
+  margin: 2rem 0 4rem 0;
+}
+
+.currency__select {
+  padding: 5px;
+  border: 2px solid var(--strong-cyan);
+  border-radius: 10px;
+  width: 60%;
+  display: block;
+  outline: none;
+  background-color: var(--dark-cyan);
+  color: var(--white);
+  font-family: "Space Mono", monospace;
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+.currency__select option {
+  background: var(--dark-cyan);
+  font-weight: 500;
+}
+
+.currency__title {
+  color: var(--strong-cyan);
+  margin-bottom: 0.5rem;
+}
+
+.currency__exchange-rate {
+  color: var(--strong-cyan);
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.currency__exchange-rate__sign {
+  font-size: 2rem;
+}
+
+.sign__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 100%;
+}
+
+.currency__sign {
+  margin-right: 10px;
+  font-size: 1.2rem;
+  color: var(--text-light-bg);
+}
+
+option:disabled {
+  color: var(--text-dark-bg);
+}
+
+.currency__select {
+  padding: 5px;
+  border: 2px solid var(--strong-cyan);
+  border-radius: 10px;
+  width: 65%;
+  display: block;
+  outline: none;
+  background-color: var(--dark-cyan);
+  color: var(--white);
+  font-family: "Space Mono", monospace;
+  font-weight: 500;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.currency__select option {
+  background: #5e7a7d;
+}
+
+.tooltip {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  margin-right: 1rem;
+  border-radius: 50%;
+  height: 1.5rem;
+  width: 1.5rem;
+  background: var(--strong-cyan);
+  color: var(--dark-cyan);
+  position: relative;
+  cursor: help;
+}
+
+.tooltip::after {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  visibility: hidden;
+  white-space: nowrap;
+  content: attr(data-tooltip);
+  border-radius: 10px;
+  font-size: 0.8rem;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  margin: auto;
+  top: calc(-150% - 3px);
+  padding: 0.5rem;
+  background: var(--strong-cyan);
+  color: var(--dark-cyan);
+  text-transform: capitalize;
+}
+
+.tooltip:hover::after {
+  visibility: visible;
+}
+
 input[type="number"] {
+  direction: rtl;
   outline: none;
   border: none;
   text-align: right;
   font-family: "Space Mono", monospace;
   width: 100%;
-  background: #f4fafa;
+  background: var(--calc-bg);
   font-size: 1.2rem;
-  color: #00494d;
+  color: var(--dark-cyan);
   font-weight: 700;
   cursor: pointer;
 }
@@ -149,7 +314,7 @@ input::-webkit-inner-spin-button {
 
 .right-side {
   margin-left: 0.6rem;
-  background: #00494d;
+  background: var(--dark-cyan);
   border-radius: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -176,20 +341,22 @@ input::-webkit-inner-spin-button {
 }
 
 .total h5 {
-  color: white;
+  color: var(--white);
+  white-space: nowrap;
 }
 
 .total h6 {
-  color: #7f9c9f;
+  white-space: nowrap;
+  color: var(--text-dark-bg);
 }
 
 .result {
-  color: #26c0ab;
+  color: var(--strong-cyan);
   font-size: 2rem;
 }
 
-#reset-btn {
-  position: absolute;
+.reset-btn {
+  position: static;
   margin: auto;
   bottom: 1.2rem;
   left: 0;
@@ -200,21 +367,26 @@ input::-webkit-inner-spin-button {
   text-transform: uppercase;
   font-size: 1.1rem;
   font-family: "Space Mono", monospace;
-  color: #00494d;
+  color: var(--dark-cyan);
   font-weight: 700;
   cursor: pointer;
   border-radius: 0.3rem;
-  background: #26c0ab;
+  background: var(--strong-cyan);
 }
 
-.active {
-  background: #26c0ab !important;
-  color: #00494d !important;
+.disabled {
+  background: #003a3d !important;
+  cursor: default;
 }
 
-.customActive {
-  background: white !important;
-  border: 2px solid #26c0ab !important;
+.buttons .active {
+  background: var(--strong-cyan);
+  color: var(--dark-cyan);
+}
+
+.buttons .customActive {
+  background: var(--white);
+  border: 2px solid var(--strong-cyan);
 }
 
 .attribution {
