--- a/style.scss
+++ b/style.scss
@@ -6,20 +6,29 @@ $breakpoint: 375px;
   padding: 0;
   box-shadow: none;
 }
+:root {
+  --body-bg: hsl(185, 41%, 84%);
+  --calc-bg: hsl(189, 41%, 97%);
+  --dark-cyan: hsl(183, 100%, 15%);
+  --text-light-bg: hsl(186, 14%, 43%);
+  --text-dark-bg: hsl(184, 14%, 56%);
+  --strong-cyan: hsl(172, 67%, 45%);
+  --white: white;
+}
 body {
   font-family: "Space Mono", monospace;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background: $lightGrayishCyan;
+  background: var(--body-bg);
 }
 .logo {
   margin-bottom: 3rem;
   margin-top: 3rem;
 }
 main {
-  background: white;
+  background: var(--white);
   padding: 1.4rem;
   border-radius: 1rem;
   display: grid;
@@ -30,16 +39,20 @@ main {
 .left-side {
   padding: 0.65rem;
   margin-right: 0.65rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
 }
 h4 {
   font-size: 0.7rem;
-  color: $darkGrayishCyan;
+  color: var(--text-light-bg);
 }
 .buttons {
   display: grid;
   grid-template-columns: repeat(3, 6.25rem);
   gap: 0.65rem;
-  margin-block: 30px;
+  margin: 30px 0;
   h4 {
     grid-column: 1/4;
   }
@@ -48,22 +61,22 @@ h4 {
     border: none;
     padding: 0.45rem 0.9rem;
     border-radius: 0.3rem;
-    background: $veryDarkCyan;
-    color: white;
+    background: var(--dark-cyan);
+    color: var(--white);
     font-weight: 700;
     cursor: pointer;
     height: 2.1rem;
   }
   .custom {
-    background: $lightGrayishCyan2;
-    color: $darkGrayishCyan;
-    border: 2px solid white;
+    background: var(--calc-bg);
+    color: var(--text-light-bg);
+    border: 2px solid var(--white);
     display: flex;
     align-items: center;
     justify-content: center;
     input[type="number"] {
       text-align: center;
-      background: $lightGrayishCyan2;
+      background: var(--calc-bg);
       width: 100%;
       font-size: 0.9rem;
     }
@@ -74,19 +87,123 @@ label {
   align-items: center;
   padding: 0.9rem;
   border-radius: 0.3rem;
-  background: $lightGrayishCyan2;
+  background: var(--calc-bg);
   cursor: pointer;
 }
+.currency {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 100px;
+  margin: 2rem 0 4rem 0;
+  &__select {
+    padding: 5px;
+    border: 2px solid var(--strong-cyan);
+    border-radius: 10px;
+    width: 60%;
+    display: block;
+    outline: none;
+    background-color: var(--dark-cyan);
+    color: var(--white);
+    font-family: "Space Mono", monospace;
+    font-weight: 500;
+    font-size: 1rem;
+    option {
+      background: var(--dark-cyan);
+      font-weight: 500;
+    }
+  }
+  &__title {
+    color: var(--strong-cyan);
+    margin-bottom: 0.5rem;
+  }
+  &__exchange-rate {
+    color: var(--strong-cyan);
+    font-weight: 700;
+    font-size: 1.5rem;
+    &__sign {
+      font-size: 2rem;
+    }
+  }
+}
+.sign__container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+}
+.currency__sign {
+  margin-right: 10px;
+  font-size: 1.2rem;
+  color: var(--text-light-bg);
+}
 
+option:disabled {
+  color: var(--text-dark-bg);
+}
+.currency__select {
+  padding: 5px;
+  border: 2px solid var(--strong-cyan);
+  border-radius: 10px;
+  width: 65%;
+  display: block;
+  outline: none;
+  background-color: var(--dark-cyan);
+  color: var(--white);
+  font-family: "Space Mono", monospace;
+  font-weight: 500;
+  font-size: 1rem;
+  cursor: pointer;
+  option {
+    background: hsl(186, 14%, 43%);
+  }
+}
+.tooltip {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: flex-end;
+  margin-right: 1rem;
+  border-radius: 50%;
+  height: 1.5rem;
+  width: 1.5rem;
+  background: var(--strong-cyan);
+  color: var(--dark-cyan);
+  position: relative;
+  cursor: help;
+  &::after {
+    transition: 0.3s;
+    visibility: hidden;
+    white-space: nowrap;
+    content: attr(data-tooltip);
+    border-radius: 10px;
+    font-size: 0.8rem;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: auto;
+    top: calc(-150% - 3px);
+    padding: 0.5rem;
+    background: var(--strong-cyan);
+    color: var(--dark-cyan);
+    text-transform: capitalize;
+  }
+  &:hover::after {
+    visibility: visible;
+  }
+}
 input[type="number"] {
+  direction: rtl;
   outline: none;
   border: none;
   text-align: right;
   font-family: "Space Mono", monospace;
   width: 100%;
-  background: $lightGrayishCyan2;
+  background: var(--calc-bg);
   font-size: 1.2rem;
-  color: $veryDarkCyan;
+  color: var(--dark-cyan);
   font-weight: 700;
   cursor: pointer;
 }
@@ -106,7 +223,7 @@ input::-webkit-inner-spin-button {
 }
 .right-side {
   margin-left: 0.6rem;
-  background: $veryDarkCyan;
+  background: var(--dark-cyan);
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
@@ -121,18 +238,20 @@ input::-webkit-inner-spin-button {
 }
 .total {
   h5 {
-    color: white;
+    color: var(--white);
+    white-space: nowrap;
   }
   h6 {
-    color: $darkGrayishCyan2;
+    white-space: nowrap;
+    color: var(--text-dark-bg);
   }
 }
 .result {
-  color: $strongCyan;
+  color: var(--strong-cyan);
   font-size: 2rem;
 }
-#reset-btn {
-  position: absolute;
+.reset-btn {
+  position: static;
   margin: auto;
   bottom: 1.2rem;
   left: 0;
@@ -143,20 +262,28 @@ input::-webkit-inner-spin-button {
   text-transform: uppercase;
   font-size: 1.1rem;
   font-family: "Space Mono", monospace;
-  color: $veryDarkCyan;
+  color: var(--dark-cyan);
   font-weight: 700;
   cursor: pointer;
   border-radius: 0.3rem;
-  background: $strongCyan;
+  background: var(--strong-cyan);
 }
-.active {
-  background: $strongCyan !important;
-  color: $veryDarkCyan !important;
+
+.disabled {
+  background: hsl(183, 100%, 12%) !important ;
+  cursor: default;
 }
-.customActive {
-  background: white !important;
-  border: 2px solid $strongCyan !important;
+.buttons {
+  .active {
+    background: var(--strong-cyan);
+    color: var(--dark-cyan);
+  }
+  .customActive {
+    background: var(--white);
+    border: 2px solid var(--strong-cyan);
+  }
 }
+
 .attribution {
   font-size: 11px;
   text-align: center;
