--- a/style.css
+++ b/style.css
@@ -5,16 +5,6 @@
           box-shadow: none;
 }
 
-:root {
-  --body-bg: hsl(185, 41%, 84%);
-  --calc-bg: hsl(189, 41%, 97%);
-  --dark-cyan: hsl(183, 100%, 15%);
-  --text-light-bg: hsl(186, 14%, 43%);
-  --text-dark-bg: hsl(184, 14%, 56%);
-  --strong-cyan: hsl(172, 67%, 45%);
-  --white: white;
-}
-
 body {
   font-family: "Space Mono", monospace;
   display: -webkit-box;
@@ -30,7 +20,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background: var(--body-bg);
+  background: #c5e4e7;
 }
 
 .logo {
@@ -39,7 +29,7 @@ body {
 }
 
 main {
-  background: var(--white);
+  background: white;
   padding: 1.4rem;
   border-radius: 1rem;
   display: -ms-grid;
@@ -52,24 +42,11 @@ main {
 .left-side {
   padding: 0.65rem;
   margin-right: 0.65rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 h4 {
   font-size: 0.7rem;
-  color: var(--text-light-bg);
+  color: #5e7a7d;
 }
 
 .buttons {
@@ -78,7 +55,7 @@ h4 {
   -ms-grid-columns: (6.25rem)[3];
       grid-template-columns: repeat(3, 6.25rem);
   gap: 0.65rem;
-  margin: 30px 0;
+  margin-block: 30px;
 }
 
 .buttons h4 {
@@ -92,17 +69,17 @@ h4 {
   border: none;
   padding: 0.45rem 0.9rem;
   border-radius: 0.3rem;
-  background: var(--dark-cyan);
-  color: var(--white);
+  background: #00494d;
+  color: white;
   font-weight: 700;
   cursor: pointer;
   height: 2.1rem;
 }
 
 .buttons .custom {
-  background: var(--calc-bg);
-  color: var(--text-light-bg);
-  border: 2px solid var(--white);
+  background: #f4fafa;
+  color: #5e7a7d;
+  border: 2px solid white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -116,7 +93,7 @@ h4 {
 
 .buttons .custom input[type="number"] {
   text-align: center;
-  background: var(--calc-bg);
+  background: #f4fafa;
   width: 100%;
   font-size: 0.9rem;
 }
@@ -130,161 +107,19 @@ label {
           align-items: center;
   padding: 0.9rem;
   border-radius: 0.3rem;
-  background: var(--calc-bg);
+  background: #f4fafa;
   cursor: pointer;
-}
-
-.currency {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 100px;
-  margin: 2rem 0 4rem 0;
-}
-
-.currency__select {
-  padding: 5px;
-  border: 2px solid var(--strong-cyan);
-  border-radius: 10px;
-  width: 60%;
-  display: block;
-  outline: none;
-  background-color: var(--dark-cyan);
-  color: var(--white);
-  font-family: "Space Mono", monospace;
-  font-weight: 500;
-  font-size: 1rem;
-}
-
-.currency__select option {
-  background: var(--dark-cyan);
-  font-weight: 500;
-}
-
-.currency__title {
-  color: var(--strong-cyan);
-  margin-bottom: 0.5rem;
-}
-
-.currency__exchange-rate {
-  color: var(--strong-cyan);
-  font-weight: 700;
-  font-size: 1.5rem;
-}
-
-.currency__exchange-rate__sign {
-  font-size: 2rem;
-}
-
-.sign__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  width: 100%;
-}
-
-.currency__sign {
-  margin-right: 10px;
-  font-size: 1.2rem;
-  color: var(--text-light-bg);
-}
-
-option:disabled {
-  color: var(--text-dark-bg);
-}
-
-.currency__select {
-  padding: 5px;
-  border: 2px solid var(--strong-cyan);
-  border-radius: 10px;
-  width: 65%;
-  display: block;
-  outline: none;
-  background-color: var(--dark-cyan);
-  color: var(--white);
-  font-family: "Space Mono", monospace;
-  font-weight: 500;
-  font-size: 1rem;
-  cursor: pointer;
-}
-
-.currency__select option {
-  background: #5e7a7d;
-}
-
-.tooltip {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
-  margin-right: 1rem;
-  border-radius: 50%;
-  height: 1.5rem;
-  width: 1.5rem;
-  background: var(--strong-cyan);
-  color: var(--dark-cyan);
-  position: relative;
-  cursor: help;
-}
-
-.tooltip::after {
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  visibility: hidden;
-  white-space: nowrap;
-  content: attr(data-tooltip);
-  border-radius: 10px;
-  font-size: 0.8rem;
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  margin: auto;
-  top: calc(-150% - 3px);
-  padding: 0.5rem;
-  background: var(--strong-cyan);
-  color: var(--dark-cyan);
-  text-transform: capitalize;
-}
-
-.tooltip:hover::after {
-  visibility: visible;
 }
 
 input[type="number"] {
-  direction: rtl;
   outline: none;
   border: none;
   text-align: right;
   font-family: "Space Mono", monospace;
   width: 100%;
-  background: var(--calc-bg);
+  background: #f4fafa;
   font-size: 1.2rem;
-  color: var(--dark-cyan);
+  color: #00494d;
   font-weight: 700;
   cursor: pointer;
 }
@@ -314,7 +149,7 @@ input::-webkit-inner-spin-button {
 
 .right-side {
   margin-left: 0.6rem;
-  background: var(--dark-cyan);
+  background: #00494d;
   border-radius: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -341,22 +176,20 @@ input::-webkit-inner-spin-button {
 }
 
 .total h5 {
-  color: var(--white);
-  white-space: nowrap;
+  color: white;
 }
 
 .total h6 {
-  white-space: nowrap;
-  color: var(--text-dark-bg);
+  color: #7f9c9f;
 }
 
 .result {
-  color: var(--strong-cyan);
+  color: #26c0ab;
   font-size: 2rem;
 }
 
-.reset-btn {
-  position: static;
+#reset-btn {
+  position: absolute;
   margin: auto;
   bottom: 1.2rem;
   left: 0;
@@ -367,26 +200,21 @@ input::-webkit-inner-spin-button {
   text-transform: uppercase;
   font-size: 1.1rem;
   font-family: "Space Mono", monospace;
-  color: var(--dark-cyan);
+  color: #00494d;
   font-weight: 700;
   cursor: pointer;
   border-radius: 0.3rem;
-  background: var(--strong-cyan);
+  background: #26c0ab;
 }
 
-.disabled {
-  background: #003a3d !important;
-  cursor: default;
+.active {
+  background: #26c0ab !important;
+  color: #00494d !important;
 }
 
-.buttons .active {
-  background: var(--strong-cyan);
-  color: var(--dark-cyan);
-}
-
-.buttons .customActive {
-  background: var(--white);
-  border: 2px solid var(--strong-cyan);
+.customActive {
+  background: white !important;
+  border: 2px solid #26c0ab !important;
 }
 
 .attribution {
